# movie_scrapper

./: .dockerignore  .gitignore  Dockerfile  Notes.md  README.md  client.py  docker-compose.yaml  filter_configs.json  links.txt  main.py  pyproject.toml  sample.env  start_server.sh  target_links.txt  tox.ini
.github/workflow/: ci.yaml
.github/workflows/: ci.yml
app/: __init__.py  client.py  client_utils.py  config.py  logger.py  logging.py  main.py  setup.py
app/api/: __init__.py  actions.py  parse_config.py  routes.py  schemas.py  scrapper.py  tests.py  utils.py
app/api/services/: __init__.py  geolocation.py  gimme_proxies.py  github_proxies.py  mac_address.py  proxy1.py  proxy2.py  proxy3.py  ssl_proxies.py  user_agents.py
app/api/utils/: parse_config.py  parser.py  scrapper.py
app/config/: __init__.py  settings.py
app/routers/: __init__.py  scrap.py
app/scrapper/: __init__.py  main.py  ms_parser.py  ms_scrapper.py  ptests.py  sfast_api.py
app/scrapper/text_files/: 1full_urls.txt  1full_urls_clean.txt  1potential_cyberlockers.txt  1potential_cyberlockers_full_urls.txt  Knowncyberlockers.txt  movies.txt
app/scrapper/text_files/archive/: movies_links copy.txt  potential_cyberlockers2.txt
app/serializers/: __init__.py  request_url.py
data/: .gitignore  filter_configs.json  target_links.txt
scrapper_dev/: all.js  main.py  ms_parser.py  ms_scrapper.py  ptests.py
scrapper_dev/text_files/: fffffmovies.html  fffffmovies1.html  fmov.html  movies.html  movies_links.txt  potential_cyberlockers.txt  potential_cyberlockers_full_urls.txt  potential_cyberlockers_html_parts.txt
scrapper_dev/text_files/archive/: CyberlockerPerpRecordKeeper.csv  potential_cyberlockers1.txt  potential_cyberlockers_long.txt
temp/: CantScrapLink  ConnectionErrorLink  GoodResponce  Responce404  TryParseLink
tests/: 88_ulrs_test_-_Bull.txt  test_api.py  test_auth.py
