[tool.poetry]
name = "cyber_scrapper"
version = "0.1.0"
description = "Fastapi API with scrapper to get cyberlocker urls from pirate movies wedsites"
authors = ["Petros <Xavrais312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
selenium = "^4.1.0"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"
fake-useragent = "^0.1.11"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
