[tool.poetry]
name = "movie-scrapper"
version = "0.1.0"
description = "Fastapi API with scrapper to get cyberlocker urls from pirate movies wedsites"
authors = ["Aleksandr <amvorobei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
selenium = "^4.1.3"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
loguru = "^0.6.0"
requests = "^2.27.1"
random-user-agent = "^1.0.1"
beautifulsoup4 = "^4.11.1"
webdriver-manager = "^3.7.0"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "^3.1.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
